fix: remove overflow setting

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 html,
 body {
   margin: 0;
-  overflow: hidden;
-  height: 100%;
+  /* overflow: hidden; */
+  /* height: 100%; */
   font-family: "Poppins", sans-serif;
 }
 
